--- a/public/500.html
+++ b/public/500.html
@@ -50,7 +50,7 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h3 class="subheader">We're sorry, but something went wrong.</h3>
   </div>
   <p>If you are the application owner check the logs for more information.</p>
 </body>
